2024-05-26  Jim Fowler  <jrf@Pergamon>

	* aabooks/ajbbook: move all unit tests to explicit test programs
	in ./tests.  Note that ajbcomments.py and entrytext.py were not
	moved as these are broken and the system no longer uses text
	based CSV files anymore.  These files will be delete soon.

2024-05-25  Jim Fowler  <jrf@Pergamon>

	* aabooks/lib: move all unittests to explict test programs in
	./tests.  This was done for entrylists.py, isbn.py,
	pagination_xml.py, roman.py, search.py, and utils.py. This is in
	preparation for a migration to a better build and installation
	method.

2023-02-05  Jim Fowler  <jrf@Pergamon>

	* Docs/Hjs/hjsentry.py: Added space between index number and
	author/editor names.

2023-02-04  Jim Fowler  <jrf@Pergamon>

	* Tools/python/aabooks/ajbbook/entrynum.py: Finished AJBEntryNum
	class I believe.  Stole the XML routines from entry_xml.py.  Added
	additional tests in test_entrynum.py.

2023-02-02  Jim Fowler  <jrf@Pergamon>

	* Tools/python/aabooks/ajbbook/entrynum.py
	(AJBEntryNum.from_string): Created entrynum.py.  Stole the to/from
	string functions from the library.  Also wrote the test code for
	the existing functions.

2023-01-30  Jim Fowler  <jrf@Pergamon>

	* Docs/Hjs/hjsentry.py: Added test in comments to ignore any
	string with "HJS 94" in it.  I need to rerun catalogue_xml.py to
	regenerate books.tex in order to incorporate previously missing
	items.

	Also we are now using hjsentry.py as the class for printing
	catalogue entries.

	* Docs/Hjs/Makefile.am: change books.tex target to the_books.tex

2022-11-26  Jim Fowler  <jrf@biblion>

	* Docs/Hjs/hjs_test.xml: created test entries for cat_entry.py

	* Docs/Hjs/test_hjs.tex: created test document for cat_entry.py

	* Docs/Hjs/cat_entry.py (CatEntry): created class CatEntry as
	a base class for different catalogue entries.  Also create classs
	HjsEntry.

2022-10-24  Jim Fowler  <jrf@biblion>

	* Docs/Hjs/catalogue_xml.py (print_entry2): Created new function